<resources>
    <string name="app_name" translatable="false">Localization Demo</string>
    <string name="activity" translatable="false">Activity</string>
    <string name="fragment" translatable="false">Fragment</string>
    <string name="parent_fragment" translatable="false">Parent Fragment</string>
    <string name="child_fragment" translatable="false">Child Fragment</string>
    <string name="back" translatable="false">&lt; Back</string>
    <string name="dark_theme_description" translatable="false">Please toggle the dark theme from system settings</string>

    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="hello_world">Hello world</string>
    <string name="language">English</string>
    <string name="sample_youtube_app">When you open the YouTube app, you’ll land on What to Watch. What to Watch highlights recent uploads and activity from your subscriptions and videos recommended for you. You will also see popular content and YouTube Mixes if you’ve previously watched music videos. You can navigate back to this feed at any time from the Guide.</string>
    <string name="sample_apple_story">The apple tree (Malus domestica) is a deciduous tree in the rose family best known for its sweet, pomaceous fruit, the apple. It is cultivated worldwide as a fruit tree, and is the most widely grown species in the genus Malus. The tree originated in Central Asia, where its wild ancestor, Malus sieversii, is still found today. Apples have been grown for thousands of years in Asia and Europe, and were brought to North America by European colonists. Apples have religious and mythological significance in many cultures, including Norse, Greek and European Christian traditions. Apple trees are large if grown from seed, but small if grafted onto roots (rootstock). There are more than 7,500 known cultivars of apples, resulting in a range of desired characteristics. Different cultivars are bred for various tastes and uses, including cooking, eating raw and cider production. Apples are generally propagated by grafting, although wild apples grow readily from seed. Trees and fruit are prone to a number of fungal, bacterial and pest problems, which can be controlled by a number of organic and non-organic means. In 2010, the fruit\'s genome was decoded as part of research on disease control and selective breeding in apple production. About 80 million tons of apples were grown worldwide in 2013, and China produced almost half of this total.[3] The United States is the second-leading producer, with more than 6% of world production. Turkey is third, followed by Italy, India and Poland. Apples are often eaten raw, but can also be found in many prepared foods (especially desserts) and drinks. Many beneficial health effects are thought to result from eating apples; however, two types of allergies are attributed to various proteins found in the fruit.</string>
    <string name="prev" translatable="false"><![CDATA[<]]></string>
    <string name="next" translatable="false"><![CDATA[>]]></string>
    <string name="change_language" translatable="false">Change Language &gt;</string>
    <string name="show_content" translatable="false">Show content &gt;</string>
    <string name="show_website" translatable="false">Show website &gt;</string>
    <string name="select_any_language" translatable="false">Select any language</string>
    <string name="viewpager_description" translatable="false">Swipe or click to change page</string>

    <string name="menu_simple_activity" translatable="false">Simple Activity</string>
    <string name="menu_custom_activity" translatable="false">Custom Activity</string>
    <string name="menu_stacked_activity" translatable="false">Stacked Activity</string>
    <string name="menu_simple_fragment" translatable="false">Simple Fragment</string>
    <string name="menu_nested_fragment" translatable="false">Nested Fragment</string>
    <string name="menu_dialog_fragment" translatable="false">Dialog Fragment</string>
    <string name="menu_dialog_web_view" translatable="false">Dialog and WebView</string>
    <string name="menu_viewpager" translatable="false">View Pager</string>
    <string name="menu_list_preferences" translatable="false">Preference Fragment</string>
    <string name="menu_dark_theme" translatable="false">Dark Theme</string>
    <string name="menu_hilt" translatable="false">Dependency Injection with Hilt</string>
    <string name="menu_broadcast_receiver" translatable="false">Broadcast Receiver</string>

    <string name="american" translatable="false">American</string>
    <string name="chinese" translatable="false">Chinese</string>
    <string name="italian" translatable="false">Italian</string>
    <string name="japanese" translatable="false">Japanese</string>
    <string name="korean" translatable="false">Korean</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="thai" translatable="false">Thai</string>
    <string name="hebrew" translatable="false">Hebrew</string>
</resources>
