<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv_language_chooser"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/btn_american"
            android:layout_width="@dimen/btn_language_size"
            android:layout_height="@dimen/btn_language_size"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp"
            android:background="@color/transparent"
            android:contentDescription="@string/american"
            android:scaleType="fitCenter"
            android:src="@mipmap/country_america" />

        <ImageButton
            android:id="@+id/btn_chinese"
            android:layout_width="@dimen/btn_language_size"
            android:layout_height="@dimen/btn_language_size"
            android:layout_marginEnd="8dp"
            android:background="@color/transparent"
            android:contentDescription="@string/chinese"
            android:scaleType="fitCenter"
            android:src="@mipmap/country_china" />

        <ImageButton
            android:id="@+id/btn_italian"
            android:layout_width="@dimen/btn_language_size"
            android:layout_height="@dimen/btn_language_size"
            android:layout_marginEnd="8dp"
            android:background="@color/transparent"
            android:contentDescription="@string/italian"
            android:scaleType="fitCenter"
            android:src="@mipmap/country_italy" />

        <ImageButton
            android:id="@+id/btn_japanese"
            android:layout_width="@dimen/btn_language_size"
            android:layout_height="@dimen/btn_language_size"
            android:layout_marginEnd="8dp"
            android:background="@color/transparent"
            android:contentDescription="@string/japanese"
            android:scaleType="fitCenter"
            android:src="@mipmap/country_japan" />

        <ImageButton
            android:id="@+id/btn_korean"
            android:layout_width="@dimen/btn_language_size"
            android:layout_height="@dimen/btn_language_size"
            android:layout_marginEnd="8dp"
            android:background="@color/transparent"
            android:contentDescription="@string/korean"
            android:scaleType="fitCenter"
            android:src="@mipmap/country_korea" />

        <ImageButton
            android:id="@+id/btn_portuguese"
            android:layout_width="@dimen/btn_language_size"
            android:layout_height="@dimen/btn_language_size"
            android:layout_marginEnd="8dp"
            android:background="@color/transparent"
            android:contentDescription="@string/portuguese"
            android:scaleType="fitCenter"
            android:src="@mipmap/country_portugal" />

        <ImageButton
            android:id="@+id/btn_thai"
            android:layout_width="@dimen/btn_language_size"
            android:layout_height="@dimen/btn_language_size"
            android:layout_marginEnd="32dp"
            android:background="@color/transparent"
            android:contentDescription="@string/thai"
            android:scaleType="fitCenter"
            android:src="@mipmap/country_thai" />
    </LinearLayout>
</HorizontalScrollView>
