<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_background_primary_gradient"
    android:orientation="vertical"
    tools:context="com.akexorcist.localizationapp.simplefragment.SimpleFragmentActivity">

    <Button
        android:id="@+id/btn_back"
        style="@style/Button.White.Outline.Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/back" />

    <TextView
        style="@style/Text.Content.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/viewpager_description" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:animateLayoutChanges="true">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_greeting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_background_content" />

        <Button
            android:id="@+id/btn_prev"
            style="@style/Button.White.Outline.Page"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/prev" />

        <Button
            android:id="@+id/btn_next"
            style="@style/Button.White.Outline.Page"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="@string/next" />
    </FrameLayout>

    <include
        android:id="@+id/layout_language_chooser"
        layout="@layout/layout_language_chooser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp" />

</LinearLayout>
